# topometry

./: .gitignore  README.md  citation.cff  pyproject.toml
notebooks/: example.ipynb
topo/: analysis.py  topograph.py  uom.py
topo/layouts/: graph_utils.py  map.py  projector.py
topo/utils/: _utils.py  umap_utils.py
